--- a/src/client/Cargo.toml
+++ b/src/client/Cargo.toml
@@ -1,6 +1,9 @@
 [package]
-name = "usboip_client"
-version = "0.0.0"
+name = "usboip-client"
+version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+
+[dependencies.usboip-protocol]
+path = "../protocol"
