--- a/src/client/Cargo.toml
+++ b/src/client/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "usboip-client"
+name = "usbvip-client"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 
-[dependencies.usboip-protocol]
+[dependencies.usbvip-protocol]
 path = "../protocol"
